Custom website page and layout and contact form

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -3,19 +3,312 @@
        *ngIf="isLoadingResults">
     <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
   </div>
-  <mat-grid-list cols="3">
-    <mat-grid-tile *ngFor="let post of posts">
-      <mat-card class="example-card" [routerLink]="['/details/', post._id]">
-        <mat-card-header>
-          <div mat-card-avatar class="example-header-image"></div>
-          <mat-card-title>{{post.postTitle}}</mat-card-title>
-          <mat-card-subtitle>{{post.updated}}</mat-card-subtitle>
-        </mat-card-header>
-        <img mat-card-image src="{{post.postImgUrl}}" alt="{{post.postTitle}}">
-        <mat-card-content>
-          {{post.postDesc}}
-        </mat-card-content>
-      </mat-card>
-    </mat-grid-tile>
-  </mat-grid-list>
 </div>
+
+<section class="hero is-fullheight is-dark bg1 is-intro">  
+  <div class="hero-body">
+    <div class="container">
+      <div class="columns">
+        <div class="column logocolumn">
+          <img class="logo" src="assets/images/logo.png" alt="">
+        </div>
+      </div>
+      <div class="columns">
+        <div class="column home_text">
+          <h1 class="title">Web design and development</h1>
+          <h2 class="subtitle">CREATIVITY IN DIGITAL DEVELOPMENT</h2>
+          <div class="download-btn">
+            <a class="btn home-btn" href="#ABOUT">Meet us</a>
+          </div>
+        </div>
+        <div class="column">
+          <img src="assets/images/portada.png" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="hero is-small is-bold is-light" id="ABOUT">
+  <div class="hero-body">
+    <div class="container">
+      <h2 class="title">Creatividad en desarrollo digital</h2>
+      <p>DOMINIOWEB is a young company, leader in the area of design and development services. The company has extensive experience in technologies to assist in the development of a wide variety of applications that meet the specific needs of start-ups, and medium-sized and large established companies.</p>
+    </div>
+    <div class="container">
+      <div class="columns">
+        <div class="column">
+          <p>In DOMINIOWEB we are guided by innovative thinking. The most powerful characteristic of man is innovative thinking, which allows an organization like ours to overcome expectations, to be above routine, expected and habitual, reaching innovative solutions that add value to our products and services while we strengthen our customers by differentiating them from the rest of the market.</p>
+          <p>We make your site work much better, we can improve the potential of your business. Our team can give you the brightness you need in design and development. We respect deadlines, understand budgets and guarantee everything we develop.</p>
+        </div>
+        <div class="column">
+          <div class="about_phone wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">
+            <img src="assets/images/tecnologias.png" alt="">
+          </div>
+        </div>
+      </div>
+      <p>In addition to web design and development, DOMINIOWEB also has Social Media Marketing, Search Engine Marketing, Search Engine Optimization, hosting, domain registration, e-commerce solutions, content management systems, Flash, html5, to name a few of our services . The goal of DOMINIOWEB is to provide an innovative experience in design and development using our industry knowledge, our experience, the wealth of dynamic ideas and cutting-edge technology.</p>
+    </div>
+  </div>
+</section>
+
+<section class="hero is-small is-bold is-light">
+  <div class="hero-body">
+    <div class="container">
+      <div class="columns">
+        <div class="column">    
+          <div class="single_about_area fadeInUp wow" data-wow-duration=".5s" data-wow-delay="1.5s">
+          <div><i class="pe-7s-target"></i></div>
+          <h3 class="subtitle">Mission</h3>
+          <p>Being a company specialized in the development of information technologies and products related to technological development that, for its quality in services, treatment and advice, is the preferred of both professional and amateur clients.</p>
+          </div>
+
+          <div class="single_about_area fadeInUp wow" data-wow-duration=".5s" data-wow-delay="1.5s">
+            <div><i class="pe-7s-look"></i></div>
+            <h3 class="subtitle">Vision</h3>
+            <p>Consolidate as leaders in the market of technology providers serving all levels of customers and helping to have a competitive and innovative Mexico.</p>
+          </div>
+          <div class="single_about_area fadeInUp wow" data-wow-duration=".5s" data-wow-delay="1.5s">
+            <div><i class="pe-7s-diamond"></i></div>
+            <h3 class="subtitle">Values</h3>
+            <p>First of all develop a high quality work, which is recommended only to our customers, differentiating ourselves from the competition. As well as guarantee the commitments of scope and time acquired.</p>
+          </div>
+        </div>
+        <div class="column">
+          <div class="about_phone wow fadeInRight" data-wow-duration="1s" data-wow-delay=".5s">
+            <img src="assets/images/valores.png" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section id="FONDO3" class="hero is-medium is-dark">
+  <div class="hero-body">
+    <div class="container">
+    </div>       
+  </div>
+</section>
+
+<section class="hero is-small is-bold is-light">
+  <div class="hero-body">
+    <div class="container">
+      <h2 class="title">Quality is the key</h2>
+    </div>
+    <div class="container">
+      <div class="columns">
+        <div class="column">
+          <p>In DOMINIOWEB each project undertaken implies seven steps for its development. These are the definition, analysis, design, development, implementation and support, taking care that in each of these levels the most important factor is Quality Control (CC).</p>
+          <p>The strength of DOMINIOWEB is the focus in the quality process that also ensures the development of the most demanding requirements of the clients helping us to document them in a clear and coherent way. The continuous improvement of our Quality Management System (QMS) perfectly integrates multiple quality approaches, which result in tangible benefits for our customers.</p>
+        </div>
+        <div class="column">
+          <div class="video">
+            <img src="assets/images/construccion-calidad.png" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="hero is-small is-light is-bold" id="FEATURES">
+  <div class="hero-body">
+    <div class="container">
+      <h2 class="title">Our services</h2>
+      <p>Learn about the services that DOMINIOWEB offers you. We can assure you that your site, platform or development can not be in better hands than in those of our experts.</p>
+      <div class="container">
+      <div class="columns">
+        <div class="column">
+          <!-- FEATURE -->
+                        <div class="right_single_feature">
+                            <!-- ICON -->
+                            <div><span class="pe-7s-like"></span></div>
+
+                            <!-- FEATURE HEADING AND DESCRIPTION -->
+                            <h3><span>/</span>Creative design</h3>
+                            <p>Project your brand is the main commitment that DOMINO WEB is assumed. We develop your concept and put the experience that the company has for your business to be successful.</p>
+                        </div>
+
+                        <!-- END SINGLE FEATURE -->
+
+
+                        <!-- FEATURE -->
+                        <div class="right_single_feature">
+                            <!-- ICON -->
+                            <div><span class="pe-7s-display1"></span></div>
+
+                            <!-- FEATURE HEADING AND DESCRIPTION -->
+                            <h3><span>/</span>Digital marketing</h3>
+                            <p>We develop marketing strategies for digital media such as Social Networks (Twitter, Facebook, etc.), Adwords and others, for a wide dissemination of your services.</p>
+                        </div>
+                        <!-- END SINGLE FEATURE -->
+
+
+                        <!-- FEATURE -->
+                        <div class="right_single_feature">
+                            <!-- ICON -->
+                            <div><span class="pe-7s-browser"></span></div>
+
+                            <!-- FEATURE HEADING AND DESCRIPTION -->
+                            <h3><span>/</span>Web design</h3>
+                            <p>We design attractive and innovative visual solutions. We invite you to be quiet knowing that you have a web design that guarantees the impact you will have for your site.</p>
+                        </div>
+                        <!-- END SINGLE FEATURE -->
+
+                        <!-- FEATURE -->
+                        <div class="right_single_feature">
+                            <!-- ICON -->
+                            <div><span class="pe-7s-graph1"></span></div>
+
+                            <!-- FEATURE HEADING AND DESCRIPTION -->
+                            <h3><span>/</span>Analytics</h3>
+                            <p>We measure the performance of your portal and provide you with the visibility of the appropriate decisions to ensure that your investment in digital media is well spent obtaining the benefits you need.</p>
+                        </div>
+                        <!-- END SINGLE FEATURE -->
+          
+        </div>
+        <div class="column">
+<!-- FEATURE -->
+                        <div class="right_single_feature">
+                            <!-- ICON -->
+                            <div><span class="pe-7s-monitor"></span></div>
+
+                            <!-- FEATURE HEADING AND DESCRIPTION -->
+                            <h3><span>/</span>Applications development</h3>
+                            <p>We have solutions in web applications using opensources platforms and cutting-edge technologies. We offer the best IT services, custom applications and solutions to satisfy our clients.</p>
+                        </div>
+                        <!-- END SINGLE FEATURE -->
+
+
+                        <!-- FEATURE -->
+                        <div class="right_single_feature">
+                            <!-- ICON -->
+                            <div><span class="pe-7s-anchor"></span></div>
+
+                            <!-- FEATURE HEADING AND DESCRIPTION -->
+                            <h3><span>/</span>Incredible maintenance and support</h3>
+                            <p>Our solutions have our support until you see them implemented and giving you results. You can also count on our support the time you indicate us through our support service.</p>
+                        </div>
+                        <!-- END SINGLE FEATURE -->
+
+
+                        <!-- FEATURE -->
+                        <div class="right_single_feature">
+                            <!-- ICON -->
+                            <div><span class="pe-7s-gleam"></span></div>
+
+                            <!-- FEATURE HEADING AND DESCRIPTION -->
+                            <h3><span>/</span>Custom development</h3>
+                            <p>We provide custom software development services. We focus on the development of quality software that emphasizes the satisfaction of our clients' specific business needs. We create efficient solutions, maintaining the development of high quality software and constantly seek to exceed the expectations of customers.</p>
+                        </div>
+                        <!-- END SINGLE FEATURE -->
+
+                        <!-- FEATURE -->
+                        <div class="right_single_feature">
+                            <!-- ICON -->
+                            <div><span class="pe-7s-study"></span></div>
+
+                            <!-- FEATURE HEADING AND DESCRIPTION -->
+                            <h3><span>/</span>E-learning</h3>
+                            <p>We generate comprehensive solutions and easily measurable online learning products. We are a company specialized in the design, implementation and administration of online solutions to help you achieve the learning objectives for each of the educational programs required by your company.</p>
+                        </div>
+                        <!-- END SINGLE FEATURE -->
+        </div>
+      </div>
+    </div>
+    </div>
+  </div>
+</section>
+
+<section id="FONDO2" class="hero is-small is-dark is-bold">
+  <div class="hero-body">
+    <div class="container">
+    </div>       
+  </div>
+</section>
+
+<section class="hero is-small is-dark">
+  <div class="hero-body">
+    <div class="container">
+      <div class="columns">
+        <div class="column">
+          <h2 class="title left">We develop on the platform that you need</h2>
+        </div>
+        <div class="column">
+          <div class="columns">
+            <div class="column">
+              <a href>
+              <div class="single_store">
+              <i class="fa fa-apple"></i>
+                <div class="store_inner">
+                  <h2>iOS</h2>
+                </div>
+              </div>
+              </a>
+            </div>
+            <div class="column">
+              <a href>
+              <div class="single_store">
+              <i class="fa fa-android"></i>
+                <div class="store_inner">
+                  <h2>ANDROID</h2>
+                </div>
+              </div>
+              </a>
+            </div>
+            <div class="column">
+              <a href>
+              <div class="single_store">
+              <i class="fa fa-windows"></i>
+                <div class="store_inner">
+                  <h2>WINDOWS</h2>
+                </div>
+              </div>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- =========================
+     START CONTCT FORM AREA
+============================== -->
+<div id="google-map" class="wow fadeIn" data-latitude="20.5296883" data-longitude="-103.4587419,17z" data-wow-duration="1000ms" data-wow-delay="400ms"  style="display:none;"></div>
+
+<section class="hero is-small is-light">
+  <div class="hero-body">
+    <div class="container">
+      <h2 class="title">Contact us</h2>
+      <p>If you wish to request information, advice or if you need us to schedule a visit, please call us, we will enjoy to assit you and learn what you need.</p>
+    </div>
+    <div class="container">
+      <div class="columns">
+        <div class="column">
+          <div class="right_single_feature">
+            <div><span class="fa fa-phone"></span></div>
+            <h3 class="subtitle"><span>/</span>Llámanos</h3>
+            <p>Cel: 55 1333-9558</p>
+          </div>
+        </div>
+        <div class="column">
+          <div class="right_single_feature">
+            <div><span class="fa fa-map-marker"></span></div>
+            <h3 class="subtitle"><span>/</span>Adress</h3>
+            <p>8th Lancaster St, Alta California, Tlajomulco de Zuñiga, Jalisco, C.P. 45645.</p>
+          </div>
+        </div>
+        <div class="column">
+          <div class="right_single_feature">
+            <div><span class="fa fa-envelope"></span></div>
+            <h3 class="subtitle"><span>/</span>E-mail</h3>
+            <p><a href="mailto:ricardo.stagle@gmail.com">ricardo.stagle@gmail.com</a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
