--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <mat-toolbar>
   <button mat-button [matMenuTriggerFor]="menu">Menu</button>
   <mat-menu #menu="matMenu">
@@ -13,4 +14,11 @@
     </div>
   </mat-menu>
 </mat-toolbar>
-<router-outlet></router-outlet>
+  <section class="hero is-small is-bold is-light">
+    <div class="hero-body">
+      <div class="container">
+        <router-outlet></router-outlet>
+      </div>
+    </div>
+  </section>
+<app-footer></app-footer>
