--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,3 +1,7 @@
+$pe-7s-font-path: "../node_modules/pe7-icon/dist/fonts" !default;
+@import "node_modules/pe7-icon/dist/scss/pe-icon-7-stroke";
+
+
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
@@ -77,4 +81,57 @@ table {
 
 .mat-flat-button {
   margin: 5px;
+}
+
+
+
+
+.is-dark {
+  text-transform: uppercase;
+  background-color: #1A1D22 !important;
+}
+
+.is-footer{
+  background-color: #1A1D22 !important;
+  padding-bottom: 65px;
+  padding-top: 65px;
+  border-bottom: 3px solid #b71f75;
+}
+
+p a {
+  text-decoration: none;
+  color: #b71f75;
+}
+
+p.copy_right_text{
+  color: #8C8B8A;
+  font-weight: 600;
+  text-transform: uppercase;
+  font-size: 15px;
+}
+
+.scroll_top {
+  text-align: right;
+  a {
+    background: #b71f75;
+    padding: 25px;
+    i{
+    color:#fff;
+    font-size:25px;
+    }
+  }
+}
+
+.sticky{
+  position: fixed;
+  top: 0;
+  overflow: hidden;
+  z-index: 10;
+  width: 100%;
+}
+
+.example-container {
+  margin-top:20px;
+  position: relative;
+  padding: 0;
 }
