--- a/client/src/app/contact/contact.component.html
+++ b/client/src/app/contact/contact.component.html
@@ -1,3 +1,7 @@
+<section class="hero is-small is-bold is-light">
+  <div class="hero-body">
+    <div class="container">
+
 <section class="hero is-light is-bold">
   <div class="hero-body">
     <div class="container">
@@ -62,4 +66,8 @@
 
 		</form>
 	</div>
+</section>
+
+    </div>
+  </div>
 </section>
