--- a/client/src/app/admin/admin.component.html
+++ b/client/src/app/admin/admin.component.html
@@ -1,3 +1,7 @@
+<section class="hero is-small is-bold is-light">
+  <div class="hero-body">
+    <div class="container">
+
 <div class="example-container mat-elevation-z8">
   <mat-card class="example-card">
     <mat-card-header>
@@ -5,3 +9,7 @@
     </mat-card-header>
   </mat-card>
 </div>
+
+    </div>
+  </div>
+</section>
