--- a/client/src/app/auth/register/register.component.html
+++ b/client/src/app/auth/register/register.component.html
@@ -1,3 +1,7 @@
+<section class="hero is-small is-bold is-light">
+  <div class="hero-body">
+    <div class="container">
+
 <div class="example-container mat-elevation-z8">
   <div class="example-loading-shade"
        *ngIf="isLoadingResults">
@@ -32,3 +36,7 @@
     </form>
   </mat-card>
 </div>
+
+    </div>
+  </div>
+</section>
