--- a/client/src/app/blog/blog.component.html
+++ b/client/src/app/blog/blog.component.html
@@ -1,3 +1,7 @@
+<section class="hero is-small is-bold is-light">
+  <div class="hero-body">
+    <div class="container">
+
 <div class="example-container mat-elevation-z8">
   <div class="example-loading-shade"
        *ngIf="isLoadingResults">
@@ -17,3 +21,7 @@
     </mat-grid-tile>
   </mat-grid-list>
 </div>
+
+    </div>
+  </div>
+</section>
