--- a/client/src/app/category/category.component.html
+++ b/client/src/app/category/category.component.html
@@ -1,3 +1,7 @@
+<section class="hero is-small is-bold is-light">
+  <div class="hero-body">
+    <div class="container">
+
 <div class="example-container mat-elevation-z8">
   <div class="example-loading-shade"
         *ngIf="isLoadingResults">
@@ -27,3 +31,7 @@
     </table>
   </div>
 </div>
+
+    </div>
+  </div>
+</section>
