--- a/client/src/app/es-es/es-es.component.html
+++ b/client/src/app/es-es/es-es.component.html
@@ -1,22 +1,21 @@
-
 <section class="hero is-fullheight is-dark bg1 is-intro">  
   <div class="hero-body">
     <div class="container">
       <div class="columns">
         <div class="column logocolumn">
-          <img class="logo" src="assets/images/logo.png" alt="">
+          <img class="logo" src="/assets/images/logo.png" alt="">
         </div>
       </div>
       <div class="columns">
         <div class="column home_text">
-          <h1 class="title">Web design and development</h1>
-          <h2 class="subtitle">CREATIVITY IN DIGITAL DEVELOPMENT</h2>
+          <h1 class="title">DISEÑO Y DESARROLLO WEB EN TUS MANOS</h1>
+          <h2 class="subtitle">CREATIVIDAD EN DESARROLLO DIGITAL</h2>
           <div class="download-btn">
-            <a class="btn home-btn" href="#ABOUT">Meet us</a>
+            <a class="btn home-btn" href="#ABOUT">Conócenos</a>
           </div>
         </div>
         <div class="column">
-          <img src="assets/images/portada.png" alt="">
+          <img src="/assets/images/portada.png" alt="">
         </div>
       </div>
     </div>
@@ -26,22 +25,22 @@
 <section class="hero is-small is-bold is-light" id="ABOUT">
   <div class="hero-body">
     <div class="container">
-      <h2 class="title">Creatividad en desarrollo digital</h2>
-      <p>DOMINIOWEB is a young company, leader in the area of design and development services. The company has extensive experience in technologies to assist in the development of a wide variety of applications that meet the specific needs of start-ups, and medium-sized and large established companies.</p>
+      <h2 class="title">CREATIVIDAD EN DESARROLLO DIGITAL</h2>
+      <p>DOMINIOWEB es una empresa joven, lider en el área de servicios del diseño y desarrollo. La empresa cuenta con una amplia experiencia en tecnologías para ayudar en el desarrollo de una gran variedad de apliciaciones que cumplen la necesidades específicas de Start-ups, y de medianas y grandes empresas establecidas.</p>
     </div>
     <div class="container">
       <div class="columns">
         <div class="column">
-          <p>In DOMINIOWEB we are guided by innovative thinking. The most powerful characteristic of man is innovative thinking, which allows an organization like ours to overcome expectations, to be above routine, expected and habitual, reaching innovative solutions that add value to our products and services while we strengthen our customers by differentiating them from the rest of the market.</p>
-          <p>We make your site work much better, we can improve the potential of your business. Our team can give you the brightness you need in design and development. We respect deadlines, understand budgets and guarantee everything we develop.</p>
+          <p>En DOMINIOWEB nos guiamos por el pensamiento innovador. La característica más poderosa del hombre es el pensamiento innovador, lo que le permite a una organización como la nuestra superar las espectativas, ubicarse encima de la rutina, de lo esperado y habitual, llegando a soluciones innovadoras que aportan valor a nuestros productos y servicios mientras fortalecemos a nuestros clientes diferenciandolos de resto del mercado.</p>
+          <p>Hacemos que su sitio funcione mucho mejor, podemos mejorar el potencial de tu negocio. Nuestro equipo puede darle el brillo que necesita en diseño y desarrollo. Respetamos los plazos, entendemos los presupuestos y garantizamos todo lo que desarrollamos.</p>
         </div>
         <div class="column">
           <div class="about_phone wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">
-            <img src="assets/images/tecnologias.png" alt="">
+            <img src="/assets/images/tecnologias.png" alt="">
           </div>
         </div>
       </div>
-      <p>In addition to web design and development, DOMINIOWEB also has Social Media Marketing, Search Engine Marketing, Search Engine Optimization, hosting, domain registration, e-commerce solutions, content management systems, Flash, html5, to name a few of our services . The goal of DOMINIOWEB is to provide an innovative experience in design and development using our industry knowledge, our experience, the wealth of dynamic ideas and cutting-edge technology.</p>
+      <p>Ádemas de diseño y desarrollo web, DOMINIOWEB también dispone de Social Media Marketing, Search Engine Marketing, Search Engine Optimization, hosting, registro de dominios, soluciones de comercio electrónico, sistemas de gestión de contenido, Flash, html5, por mencionar algunos de nuestros servicios. El objetivo de DOMINIOWEB es proporcionar una experiencia innovadora en diseño y desarrollo utilizando nuestros conocimientos de la industria, nuestra experiencia, la riqueza de ideas dinámicas y tecnología de vanguardia.</p>
     </div>
   </div>
 </section>
@@ -53,19 +52,19 @@
         <div class="column">    
           <div class="single_about_area fadeInUp wow" data-wow-duration=".5s" data-wow-delay="1.5s">
           <div><i class="pe-7s-target"></i></div>
-          <h3 class="subtitle">Mission</h3>
-          <p>Being a company specialized in the development of information technologies and products related to technological development that, for its quality in services, treatment and advice, is the preferred of both professional and amateur clients.</p>
+          <h3 class="subtitle">MISIÓN</h3>
+          <p>Ser una empresa especializada en el desarrollo de tecnologías de la información y productos relacionados al desarrollo tecnológico que, por su calidad en los servicios, trato y asesoría, sea la preferida de los clientes tanto profesionales como amateur.</p>
           </div>
 
           <div class="single_about_area fadeInUp wow" data-wow-duration=".5s" data-wow-delay="1.5s">
             <div><i class="pe-7s-look"></i></div>
-            <h3 class="subtitle">Vision</h3>
-            <p>Consolidate as leaders in the market of technology providers serving all levels of customers and helping to have a competitive and innovative Mexico.</p>
+            <h3 class="subtitle">VISIÓN</h3>
+            <p>Consolidarnos como líderes dentro del mercado de los proveedores de tecnología atendiendo todos los niveles de clientes y ayudando a tener un México competitivo e innovador.</p>
           </div>
           <div class="single_about_area fadeInUp wow" data-wow-duration=".5s" data-wow-delay="1.5s">
             <div><i class="pe-7s-diamond"></i></div>
-            <h3 class="subtitle">Values</h3>
-            <p>First of all develop a high quality work, which is recommended only to our customers, differentiating ourselves from the competition. As well as guarantee the commitments of scope and time acquired.</p>
+            <h3 class="subtitle">VALORES</h3>
+            <p>Ante todo desarrollar un trabajo de alta calidad, que se recomiende solo ante nuestros clientes, diferenciandonos de la competencia. Así como garantaizar los compromisos de alcance y tiempo adquiridos.</p>
           </div>
         </div>
         <div class="column">
@@ -88,13 +87,13 @@
 <section class="hero is-small is-bold is-light">
   <div class="hero-body">
     <div class="container">
-      <h2 class="title">Quality is the key</h2>
+      <h2 class="title">LA CALIDAD ES LA CLAVE</h2>
     </div>
     <div class="container">
       <div class="columns">
         <div class="column">
-          <p>In DOMINIOWEB each project undertaken implies seven steps for its development. These are the definition, analysis, design, development, implementation and support, taking care that in each of these levels the most important factor is Quality Control (CC).</p>
-          <p>The strength of DOMINIOWEB is the focus in the quality process that also ensures the development of the most demanding requirements of the clients helping us to document them in a clear and coherent way. The continuous improvement of our Quality Management System (QMS) perfectly integrates multiple quality approaches, which result in tangible benefits for our customers.</p>
+          <p>En DOMINIOWEB cada proyecto emprendido implica siete pasos para su desarrollo. Estos son la definición, análisis, diseño, desarrollo, implementación y soporte, cuidando que en cada uno de estos niveles el factor más importante sea el Control de Calidad (CC).</p>
+          <p>La fortaleza de DOMINIOWEB es el enfoque en el proceso de calidad que también asegura el desarrollo de los más exigentes requisitos de los clientes ayudándonos a documentarlos en una forma clara y coherente. La mejora continua de nuestro Sistema de Gestión de Calidad (SGC) integra perfectamente múltiples enfoques de calidad, que resultan en beneficios tangibles para nuestros clientes.</p>
         </div>
         <div class="column">
           <div class="video">
@@ -109,8 +108,8 @@
 <section class="hero is-small is-light is-bold" id="FEATURES">
   <div class="hero-body">
     <div class="container">
-      <h2 class="title">Our services</h2>
-      <p>Learn about the services that DOMINIOWEB offers you. We can assure you that your site, platform or development can not be in better hands than in those of our experts.</p>
+      <h2 class="title">NUESTROS SERVICIOS</h2>
+      <p>Conoce los servicios que en DOMINIOWEB ponemos a tu disposición. Te podemos asegurar que tu sitio, plataforma o desarrollo no puede quedar en mejores manos que en las de nuestros expertos.</p>
       <div class="container">
       <div class="columns">
         <div class="column">
@@ -120,8 +119,9 @@
                             <div><span class="pe-7s-like"></span></div>
 
                             <!-- FEATURE HEADING AND DESCRIPTION -->
-                            <h3><span>/</span>Creative design</h3>
-                            <p>Project your brand is the main commitment that DOMINO WEB is assumed. We develop your concept and put the experience that the company has for your business to be successful.</p>
+                            <h3><span>/</span>DISEÑO CREATIVO</h3>
+                            <p>Proyectar tu marca es el principal compromiso que en DOMINIOWEB asumimos. Desarrollamos tu concepto y ponermos la experiencia con que la empresa cuenta para que tu negocio sea exitoso.
+                            </p>
                         </div>
 
                         <!-- END SINGLE FEATURE -->
@@ -133,8 +133,8 @@
                             <div><span class="pe-7s-display1"></span></div>
 
                             <!-- FEATURE HEADING AND DESCRIPTION -->
-                            <h3><span>/</span>Digital marketing</h3>
-                            <p>We develop marketing strategies for digital media such as Social Networks (Twitter, Facebook, etc.), Adwords and others, for a wide dissemination of your services.</p>
+                            <h3><span>/</span>MARKETING DIGITAL</h3>
+                            <p>Desarrollamos estratégias de comercialización para los medios digitales como los son Redes Sociales (Twitter, Facebook, etc), Adwords y entre otras, para una amplia difusión de tus servicios.</p>
                         </div>
                         <!-- END SINGLE FEATURE -->
 
@@ -145,8 +145,8 @@
                             <div><span class="pe-7s-browser"></span></div>
 
                             <!-- FEATURE HEADING AND DESCRIPTION -->
-                            <h3><span>/</span>Web design</h3>
-                            <p>We design attractive and innovative visual solutions. We invite you to be quiet knowing that you have a web design that guarantees the impact you will have for your site.</p>
+                            <h3><span>/</span>DISEÑO WEB</h3>
+                            <p>Diseñamos soluciones visuales atractivas e innovadoras. Te invitamos a que estes tranquilo sabiendo que cuentas con el diseño web que garantice el impacto que esparas para tu sitio.</p>
                         </div>
                         <!-- END SINGLE FEATURE -->
 
@@ -156,8 +156,8 @@
                             <div><span class="pe-7s-graph1"></span></div>
 
                             <!-- FEATURE HEADING AND DESCRIPTION -->
-                            <h3><span>/</span>Analytics</h3>
-                            <p>We measure the performance of your portal and provide you with the visibility of the appropriate decisions to ensure that your investment in digital media is well spent obtaining the benefits you need.</p>
+                            <h3><span>/</span>ANALYTICS</h3>
+                            <p>Medimos el rendimiento de tu portal y te proporcionamios la visibilidad de las decisiones oportunas para asegurar que tu inversión en los medios digitales esta bien empleada obteniendo los beneficios que necesitas.</p>
                         </div>
                         <!-- END SINGLE FEATURE -->
           
@@ -169,8 +169,8 @@
                             <div><span class="pe-7s-monitor"></span></div>
 
                             <!-- FEATURE HEADING AND DESCRIPTION -->
-                            <h3><span>/</span>Applications development</h3>
-                            <p>We have solutions in web applications using opensources platforms and cutting-edge technologies. We offer the best IT services, custom applications and solutions to satisfy our clients.</p>
+                            <h3><span>/</span>DESARROLLO DE APLICACIONES</h3>
+                            <p>Contamos con soluciones en aplicaciones web utilizando plataformas opensources y tecnologías de vanguardia. Ofrecemos los mejores servicios de TI, aplicaciones personalizadas y soluciones para satisfacer a nuestros clientes.</p>
                         </div>
                         <!-- END SINGLE FEATURE -->
 
@@ -181,8 +181,8 @@
                             <div><span class="pe-7s-anchor"></span></div>
 
                             <!-- FEATURE HEADING AND DESCRIPTION -->
-                            <h3><span>/</span>Incredible maintenance and support</h3>
-                            <p>Our solutions have our support until you see them implemented and giving you results. You can also count on our support the time you indicate us through our support service.</p>
+                            <h3><span>/</span>INCREÍBLE MANTENIMIENTO Y SOPORTE</h3>
+                            <p>Nuestras soluciones cuentan con nuestro soporte hastas verlas implementadas y dandote resultados. Ademas puedes contar con nuestro resplado el tiempo que tu nos indiques por medio de nuestro servicio de soporte.</p>
                         </div>
                         <!-- END SINGLE FEATURE -->
 
@@ -193,8 +193,8 @@
                             <div><span class="pe-7s-gleam"></span></div>
 
                             <!-- FEATURE HEADING AND DESCRIPTION -->
-                            <h3><span>/</span>Custom development</h3>
-                            <p>We provide custom software development services. We focus on the development of quality software that emphasizes the satisfaction of our clients' specific business needs. We create efficient solutions, maintaining the development of high quality software and constantly seek to exceed the expectations of customers.</p>
+                            <h3><span>/</span>DESARROLLO A LA MEDIDA</h3>
+                            <p>Proporcionamos servicios de desarrollo de software a medida. Nos centramos en el desarrollo de software de calidad que pone énfasis en la satisfacción de las necesidades comerciales específicas de nuestros clientes. Creamos soluciones eficientes, manteniendo el desarrollo de software de alta calidad y constantemente buscamos superar las expectativas de los clientes.</p>
                         </div>
                         <!-- END SINGLE FEATURE -->
 
@@ -204,8 +204,8 @@
                             <div><span class="pe-7s-study"></span></div>
 
                             <!-- FEATURE HEADING AND DESCRIPTION -->
-                            <h3><span>/</span>E-learning</h3>
-                            <p>We generate comprehensive solutions and easily measurable online learning products. We are a company specialized in the design, implementation and administration of online solutions to help you achieve the learning objectives for each of the educational programs required by your company.</p>
+                            <h3><span>/</span>E-LEARNING</h3>
+                            <p>Generamos soluciones integrales y productos de aprendizaje en línea fácilmente medibles. Somos una empresa especializada en el diseño, implementación y administración de soluciones en línea para ayudarte a alcanzar los objetivos de aprendizaje para cada unos de los programas educativos que requiera tu empresa.</p>
                         </div>
                         <!-- END SINGLE FEATURE -->
         </div>
@@ -227,7 +227,7 @@
     <div class="container">
       <div class="columns">
         <div class="column">
-          <h2 class="title left">We develop on the platform that you need</h2>
+          <h2 class="title left">Desarrollamos en la plataforma que necesites</h2>
         </div>
         <div class="column">
           <div class="columns">
@@ -276,30 +276,30 @@
 <section class="hero is-small is-light" id="CONTACT">
   <div class="hero-body">
     <div class="container">
-      <h2 class="title">Contact us</h2>
-      <p>If you wish to request information, advice or if you need us to schedule a visit, please call us, we will enjoy to assit you and learn what you need.</p>
+      <h2 class="title">CONTÁCTANOS</h2>
+      <p>Si deseas solicitar información, asesoria ó si necesitas que agendemos una visita, por favor déjanos tu mensaje a través de nuestro formulario de contacto.</p>
     </div>
     <div class="container">
       <div class="columns">
         <div class="column">
           <div class="right_single_feature">
             <div><span class="fa fa-phone"></span></div>
-            <h3 class="subtitle"><span>/</span>Llámanos</h3>
-            <p>US Cel: 224215 - 1433</p>
+            <h3 class="subtitle"><span>/</span>LLÁMANOS</h3>
             <p>MX Cel: 551333 - 9558</p>
+            <p>US Cel: 224215 - 1433</p>
           </div>
         </div>
         <div class="column">
           <div class="right_single_feature">
             <div><span class="fa fa-map-marker"></span></div>
-            <h3 class="subtitle"><span>/</span>Adress</h3>
-            <p>8th Lancaster St, Alta California, Tlajomulco de Zuñiga, Jalisco, C.P. 45645.</p>
+            <h3 class="subtitle"><span>/</span>DIRECCIÓN</h3>
+            <p>Lancaster 8, Alta California, Tlajomulco de Zuñiga, Jalisco, C.P. 45645, México.</p>
           </div>
         </div>
         <div class="column">
           <div class="right_single_feature">
             <div><span class="fa fa-envelope"></span></div>
-            <h3 class="subtitle"><span>/</span>E-mail</h3>
+            <h3 class="subtitle"><span>/</span>CORREO ELECTRÓNICO</h3>
             <p><a href="mailto:ricardo.stagle@gmail.com">ricardo.stagle@gmail.com</a></p>
           </div>
         </div>
