--- a/client/src/app/not-found/not-found.component.html
+++ b/client/src/app/not-found/not-found.component.html
@@ -1,2 +1,12 @@
-<h2>404 - Page not found</h2>
-<p *ngIf="path">You might want to go to the <a [routerLink]="path">"{{ path }}" page</a></p>
+<section class="hero is-small is-bold is-light">
+  <div class="hero-body">
+    <div class="container">
+
+<h2 class="title">404 - Page not found</h2>
+<!--
+<p *ngIf="router.url">You might want to go to the <a [routerLink]="router.url">"{{ router.url }}" page</a></p>
+-->
+
+    </div>
+  </div>
+</section>
