--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-
+<div id="first_section"></div>
 <mat-toolbar *ngIf="router.url === '/admin'">  
   <button mat-button [matMenuTriggerFor]="menu">Menu</button>
   <mat-menu #menu="matMenu">
