--- a/client/src/app/footer/footer.component.html
+++ b/client/src/app/footer/footer.component.html
@@ -12,7 +12,7 @@
       </div>
       <div class="column">
         <div class="scroll_top">
-          <a href="#HOME"><i class="fa fa-angle-up"></i></a>
+          <a href="{{currentURL}}#first_section"><i class="fa fa-angle-up"></i></a>
         </div>
       </div>
     </div>
