--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -16,10 +16,10 @@
 
   <div id="navbarBasicExample" class="navbar-menu">
     <div class="navbar-start">
-      <a class="navbar-item" routerLink="">Home</a>
-      <a class="navbar-item" href="#ABOUT">About</a>
-      <a class="navbar-item" href="#FEATURES">Services</a>
-      <a class="navbar-item" href="#CONTACT">Contact</a>
+      <a class="navbar-item" href="{{hostname}}">Home</a>
+      <a class="navbar-item" href="{{hostname}}#ABOUT">About</a>
+      <a class="navbar-item" href="{{hostname}}#FEATURES">Services</a>
+      <a class="navbar-item" href="{{hostname}}#CONTACT">Contact</a>
 
       <div class="navbar-item has-dropdown is-hoverable">
         <a class="navbar-link">
